# amqp-api-client-py

./: config.py  pyproject.toml
src/: amqp_api.py
src/amqp_api_client_py/: amqp_input_api.py  amqp_output_api.py
